--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,7 @@ p {
   background-repeat: no-repeat;
   min-height: 480px;
   background-size: cover;
+  background-position: right;
 }
 
 .design-title {
