--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ p {
   position: relative;
 }
 
+.line0line-line{
+  color: #8DD83D;
+}
+    
 .user::before {
   position: absolute;
   content: '';
